--- a/SAOD_CourseWork/SAOD_CourseWork.vcxproj
+++ b/SAOD_CourseWork/SAOD_CourseWork.vcxproj
@@ -148,6 +148,13 @@
     <ClInclude Include="KMP.h" />
     <ClInclude Include="RabinKarp.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="100k.txt" />
+    <Text Include="100m.txt" />
+    <Text Include="10k.txt" />
+    <Text Include="10m.txt" />
+    <Text Include="1m.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
