--- a/SAOD_CourseWork/SAOD_CourseWork.vcxproj.filters
+++ b/SAOD_CourseWork/SAOD_CourseWork.vcxproj.filters
@@ -48,4 +48,21 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="1m.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="10k.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="10m.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="100k.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="100m.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
